fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ body {
 .main {
   width: 100%;
   position: relative;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .section {
